--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "tsc",
-        "start": "node dist/index.js",
-        "dev": "tsc-watch --onSuccess \"node dist/index.js\""
+        "build": "tsc -b",        
+        "start": "tsc-watch --onSuccess \"node dist/index.js\""
     },
     "keywords": [],
     "author": "",
