agregar pruebas unitarias todavia no esta funcionando bien

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,6 +6,6 @@
     "username": "b32087f8a5c629",
     "password": "e1e75bfd",
     "database": "heroku_73824661b633b9f",    
-    "entities": ["/app/dist/entities/**/*"],
+    "entities": ["dist/entities/**/*"],
     "synchronize": true
 }
