--- a/package.json
+++ b/package.json
@@ -1,29 +1,39 @@
 {
-    "name": "NodeDocker",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "build": "tsc -b",        
-        "start": "tsc-watch --onSuccess \"node dist/index.js\""
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@types/cors": "^2.8.6",
-        "@types/express": "^4.17.6",
-        "@types/morgan": "^1.9.0",
-        "@types/node": "^14.0.5",
-        "cors": "^2.8.5",
-        "express": "^4.17.1",
-        "morgan": "^1.10.0",
-        "mysql": "^2.18.1",
-        "reflect-metadata": "^0.1.13",
-        "tsc-watch": "^4.2.8",
-        "typeorm": "^0.2.25"
-    },
-    "devDependencies": {
-        "typescript": "^3.9.3"
-    }
+  "name": "NodeDocker",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {    
+    "build": "tsc -b",
+    "start": "tsc-watch --onSuccess \"node dist/index.js\"",
+    "test": "jest --watch",
+    "coverage":"jest --coverage"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.6",
+    "@types/morgan": "^1.9.0",
+    "@types/node": "^14.0.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "reflect-metadata": "^0.1.13",
+    "tsc-watch": "^4.2.8",
+    "typeorm": "^0.2.25"
+  },
+  "devDependencies": {
+    "@types/jest": "^25.2.3",
+    "babel-jest": "^26.0.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "jest": "^26.0.1",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^26.1.0",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.3"
+  }
 }
